<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/player_control_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="4dp">

    <ImageButton
        android:id="@+id/btnVolDown"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/volume_down"
        android:focusable="true"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_volume_down" />

    <ImageButton
        android:id="@+id/btnVolUp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/volume_up"
        android:focusable="true"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_volume_up" />

    <ImageButton
        android:id="@+id/btnFullscreen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fullscreen"
        android:focusable="true"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_fullscreen" />
</LinearLayout>
